--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Composer List</string>
+    <string name="composer_image">composer_image</string>
 </resources>
