--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Composer List</string>
     <string name="composer_image">composer_image</string>
+    <string name="composer_item_image">composer_item_image</string>
+    <string name="lahir">Lahir</string>
 </resources>
