Added "Wafat" string value.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="composer_image">composer_image</string>
     <string name="composer_item_image">composer_item_image</string>
     <string name="lahir">Lahir</string>
+    <string name="wafat">Wafat</string>
 </resources>
