--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="composer_item_image">composer_item_image</string>
     <string name="lahir">Lahir</string>
     <string name="wafat">Wafat</string>
+    <string name="tanda_tangan">Tanda tangan</string>
 </resources>
